Edit CSS to make the code more organised I change fix height to padding to prevent overflow of the content. I also use global rule on box-sizing.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     display: flex;
@@ -6,7 +10,7 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.main {
+main {
     display: flex;
     flex-direction: column;
     flex: 1;
@@ -33,14 +37,19 @@ a,
 }
 
 .container {
-    display: flex;
-    justify-content: space-between;
     width: 1000px;
     margin: 0 auto;
 }
 
+header .container {
+    display: flex;
+    justify-content: space-between;
+}
+
 .hero .container {
     gap: 36px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .dark {
@@ -51,14 +60,8 @@ a,
     padding: 80px 0;
 }
 
-.header {
+header {
     padding: 16px 0;
-}
-
-.hero,
-.header {
-    display: flex;
-    justify-content: center;
 }
 
 .main-text {
@@ -78,6 +81,7 @@ a,
     border-radius: 8px;
     padding: 8px 32px;
     border: none;
+    display: inline-block;
 }
 
 .blue {
@@ -101,7 +105,7 @@ a,
 }
 
 .information {
-    height: 450px;
+    padding: 64px 0;
 }
 
 .information-header {
@@ -110,7 +114,7 @@ a,
     color: #1f2937;
 }
 
-.container-info {
+.information .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -136,7 +140,6 @@ a,
     border-radius: 16px;
     width: 170px;
     height: 170px;
-    box-sizing: border-box;
 }
 
 .text {
@@ -145,23 +148,21 @@ a,
 
 .quote {
     background-color: #e5e7eb;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-.container-quote {
+.quote .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 800px;
     padding: 100px 0;
 }
+
 .quote-text {
     font-size: 36px;
     font-style: italic;
     font-weight: 300;
     margin: 0;
+    padding: 0 50px;
 }
 
 .quote-name {
@@ -171,23 +172,24 @@ a,
     margin: 0;
     font-weight: 700;
     font-size: 24px;
+    padding-right: 120px;
 }
 
 .action {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 300px;
+    padding: 90px 0;
 }
-.container-action {
+
+.action .container {
     background-color: #3882f6;
-    width: 900px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 32px 48px;
-    box-sizing: border-box;
     border-radius: 8px;
+}
+
+.container--narrow {
+    width: 800px;
 }
 
 .call-action {
@@ -204,7 +206,7 @@ a,
     border: 3px solid #ffffff;
 }
 
-.footer {
+footer {
     display: flex;
     justify-content: center;
     align-items: center;
